tests/NormalTests/paczka1/fuzzy1/79809515.err
Error in line 3: b8gLTz S276 97,2
Error in line 11: EQ6r A469 13,5
Error in line 18: 5WB A469 70,0
Error in line 28: S276 A469 90,4
